kubernetes/apps/argo-system/argo-cd/config/http-route-webhook.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-webhook
  namespace: argo-system
spec:
  hostnames:
    - argo-webhook.veliz.cc
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/webhook
          method: POST
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
