kubernetes/apps/argo-system/argo-cd/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
spec:
  hostnames:
    - argo.veliz.cc
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
sops:
  age:
    - recipient: age16zf0xkqzqarwgrnrj8eqv2eaylnsuph2npuqq90esxzh8zt3t3zs5z3y4j
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaN3FKVGJzK0ZYbjU4M3pq
[...]
        503VoEGRBtWNZtAQtD7NFt/R4OvXHtNksfZd2hjiExX16b7ksQF8/w==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-22T04:13:18Z"
  mac: ENC[AES256_GCM,data:kawB31Y7Nc6nC6gNP4i12CPDjef1So5jjfSGh2CuAKBPVWPAsSkZla+APG00yRZzeSRsufG3GoC80kCvqy76LTqwYJexpzzyO8MZ73MfWSkA8QIqJLtaXVMTiMKU7SMtnWgk4JrPCV/U19dMIhxdT2H0gKEkQRSPuhJbdCTgtPY=,iv:2IjlMSqBgkDMQmKDcosTJ34JCa0C5NLTfPp0psu08TQ=,tag:LTVR9E4jOVBjj1AoyyyFpA==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.2
